add new and fix old handlers comments for swagger
